More REST API refactoring
